# agent-bootcamp

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  e2b.Dockerfile  e2b_template.md  index.html  mock_calendar.csv  mock_products.csv  mock_segments.csv  mock_stores.csv  objects.inv  pyproject.toml  testing.md
.github/workflows/: code_checks.yml  docs.yml  publish.yml  unit_tests.yml
.gradio/flagged/: dataset1.csv
aieng-agents/: README.md  pyproject.toml
aieng-agents-utils/: README.md  pyproject.toml
aieng-agents-utils/aieng/agents/: __init__.py  async_utils.py  env_vars.py  pretty_printing.py  prompts.py
aieng-agents-utils/aieng/agents/data/: __init__.py  pdf_to_hf_dataset.py
aieng-agents-utils/aieng/agents/gradio/: __init__.py
aieng-agents-utils/aieng/agents/langfuse/: oai_sdk_setup.py  shared_client.py
aieng-agents-utils/aieng/agents/tools/: README.md  gemini_grounding.py  news_events.py
aieng-agents-utils/aieng/agents/web_search/: README.md  __init__.py  requirements-app.txt
aieng-agents-utils/tests/: README.md
aieng-agents-utils/tests/tools/: test_code_interpreter.py  test_weaviate.py
aieng-agents/aieng/agents/: __init__.py  _optional_extras.py  agent_session.py  cli.py  client_manager.py  env_vars.py  logging.py
aieng-agents/aieng/agents/data/: chunk_hf_dataset.py  load_dataset.py  pdf_to_hf_dataset.py
aieng-agents/aieng/agents/gradio/: __init__.py  messages.py
aieng-agents/aieng/agents/langfuse/: __init__.py  oai_sdk_setup.py  otlp_env_setup.py  shared_client.py
aieng-agents/aieng/agents/tools/: README.md  __init__.py  code_interpreter.py  news_events.py  weaviate_kb.py
aieng-agents/aieng/agents/web_search/: README.md  requirements-app.txt
aieng-agents/tests/: README.md
aieng-agents/tests/data/: test_load_hf.py
aieng-agents/tests/tools/: test_code_interpreter.py  test_gemini_grounding.py  test_get_news_events.py
aieng-agents/tests/web_search/: test_web_search_auth.py
deploy/: README.md  startup.sh  terraform.tfstate.backup  terraform.tfvars  variables.tf
deploy/coder-template/: README.md  init.sh  main.tf  variables.tf
deploy/coder_template/: main.tf
deploy/coder_template/docker/: Dockerfile
deploy/docker/: Dockerfile  README.md
docs/: index.md
implementations/1_basics/0_search_demo/: app.py
implementations/1_basics/1_react_rag/: app.py
implementations/2_frameworks/1_react_rag/: app.py  cli.py  langfuse_gradio.py
implementations/2_frameworks/2_multi_agent/: efficient.py  efficient_multiple_kbs.py  fan_out.py  verbose.py
implementations/2_frameworks/3_code_interpreter/: README.md  app.py
implementations/2_frameworks/4_mcp/: README.md  app.py
implementations/3_evals/1_llm_judge/: README.md  run_eval.py  upload_data.py
implementations/3_evals/2_synthetic_data/: README.md  annotate_diversity.py  gradio_visualize_diversity.py  synthesize_data.py  synthesize_data_e2b.py
search/: search_index.json
src/: prompts.py  prompts_i.py
src/1_basics/0_search_demo/: README.md  app.py  gradio.py
src/1_basics/1_react_rag/: README.md  app.py  cli.py  gradio.py  gradio_es.py  gradio_weaviate.py  main.py
src/2_frameworks/: README.md  code_interpreter_gradio.py
src/2_frameworks/1_react_rag/: app.py  basic.py  cli.py  gradio.py  langfuse_gradio.py
src/2_frameworks/2_multi_agent/: efficient.py  efficient_multiple_kbs.py  efficient_multiple_kbs_vatsal.py  fan_out.py  gradio.py  planner_worker_gradio.py  planner_worker_gradio_ioana.py  test_nb.ipynb  verbose.py
src/2_frameworks/3_code_interpreter/: README.md  app.py
src/2_frameworks/4_mcp/: README.md  app.py
src/3_evals/1_llm_judge/: README.md  agent.py  example_output.txt  run_eval.py  run_eval_ioana.py  upload_data.py
src/3_evals/2_synthetic_data/: README.md  annotate_diversity.py  gradio_visualize_diversity.py  synthesize_data.py  synthesize_data_e2b.py
src/4_hitachi/1_multi_agent/: README.md  orchestrator_gradio.py
src/4_lcl_multi_agent/: agent_example_lib.py  agent_prompt_lib.py  multi_agent_setup.py  user_prompt_lib.py  verbose_multi_agent_setup.py
src/4_poc/: 1_multi_agent_db_search.py
src/4_project/: __init__.py  app.py  models.py
src/4_project/sub_agents/: code_interpreter_agent.py  triage_agent.py
src/5_small_api_application/: main.py
src/5_small_api_application/templates/: index.html
src/_1_basics/_1_react_rag/: README.md  gradio.py
src/_2_frameworks/: README.md
src/_2_frameworks/_1_react_rag/: basic.py  gradio.py  langfuse_gradio.py
src/hitachione/: main.py
src/hitachione/agents/: knowledge_retrieval.py  orchestrator.py  researcher.py  reviewer.py  synthesizer.py
src/hitachione/config/: settings.py
src/hitachione/models/: schemas.py
src/hitachione/services/: tracing.py
src/hitachione/ui/: app.py
src/utils/: __init__.py  async_utils.py  env_vars.py  logging.py  pretty_printing.py  trees.py
src/utils/data/: chunk_hf_dataset.py  create_weaviate_kb.py  create_wikipedia_embeddings.py  pdf_to_hf_dataset.py
src/utils/gradio/: messages.py
src/utils/langfuse/: oai_sdk_setup.py  shared_client.py
src/utils/tools/: README.md  __init__.py  code_interpreter.py  gemini_grounding.py  kb_elastic_search.py  kb_weaviate.py  news_events.py  weaviate_thorougput_test.py  web_search.py
src/utils/web_search/: .dockerignore  .env.example  Dockerfile  README.md  app.py  auth.py  db.py  requirements_app.in
tests/: README.md  test_keys.py  test_web_search_auth.py
tests/data_tests/: test_load_hf.py
tests/test_hitachione/: test_orchestrator.py  test_reviewer.py
tests/tool_tests/: test_code_interpreter.py  test_elastic_search.py  test_integration.py  test_weaviate.py  test_web_search.py
tests/tool_tests/example_files/: example_a.csv  pension_clients_example.csv
travel_assistant/: usecase-readme.md
travel_assistant/agents/event/: event_agent.py  event_api.py  event_gradio_app.py  test_api.py
travel_assistant/agents/flight/: flight_agent.py  flight_api.py  flight_gradio.py
travel_assistant/agents/hotel/: hotel_agent.py  hotel_api.py  test_api.py  (+2 more)
travel_assistant/utils/: __init__.py  env_vars.py
(+13 files in other folders)
