[project]
name = "agent-bootcamp"
version = "0.1.1"
description = "Vector Institute Agent Bootcamp"
readme = "README.md"
authors = [ {name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aieng-agents>=0.1.1",
    "numpy<2.3.0",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["implementations"]

[dependency-groups]
dev = [
    "aieng-platform-onboard>=0.3.6",
    "codecov>=2.1.13",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.8",
    "nbqa>=1.9.1",
    "pip-audit>=2.7.3",
    "pre-commit>=4.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.12.2",
]
docs = [
    "jinja2>=3.1.6", # Pinning version to address vulnerability GHSA-cpwx-vrp4-4pq7
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=0.24.1",
    "mkdocstrings-python>=1.16.12",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
]

# Default dependency groups to be installed
[tool.uv]
default-groups = ["dev", "docs"]
constraint-dependencies = [
    "aiohttp>=3.13.4",      # fix GHSA-p998-jp59-783m, GHSA-hcc4-c3v8-rx92, and others
    "authlib>=1.6.11",      # fix GHSA-jj8c-mmj3-mmgv
    "cryptography>=46.0.7", # fix GHSA-m959-cc7f-wv43, GHSA-p423-j2cm-9vmq
    "pyasn1>=0.6.3",        # fix GHSA-jr27-m4p2-rc6r
    "pygments>=2.20.0",     # fix GHSA-5239-wwwm-4pmq
    "python-multipart>=0.0.26", # fix GHSA-mj87-hwqh-73pj
    "requests>=2.33.0",     # fix GHSA-gc5v-m9x4-r6x2
]

[tool.uv.workspace]
members = [
  "aieng-agents",
]

[tool.uv.sources]
aieng-agents = { workspace = true }

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
    "N", # pep8-naming
    "ERA", # eradicate
    "PL", # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905", # `zip()` without an explicit `strict=` parameter
    "E501", # line too long
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "PLR2004", # Replace magic number with named constant
    "PLR0913", # Too many arguments
    "COM812", # Missing trailing comma
    "N999", # Number in module names.
    "ERA001", # Commented out lines.
]

# Ignore import violations in all `__init__.py` files.
# Ignore missing docstring in `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811", "D104"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]

[tool.coverage]
    [tool.coverage.run]
    source=["aieng-agents/aieng"]
    omit=["aieng-agents/aieng/tests/*", "tests/*", "*__init__.py"]
