[project]
name = "agent-bootcamp"
version = "0.2.0"
description = "Vector Institute Agent Bootcamp"
readme = "README.md"
authors = [ {name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aieng-agents[all]>=0.3.1",
    "numpy<2.6.0",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "aieng-platform-onboard>=0.7.3",
    "codecov>=2.1.13",
    "mypy>=2.2.0",
    "nbqa>=1.9.1",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.18",
]
docs = [
    "jinja2>=3.1.6", # Pinning version to address vulnerability GHSA-cpwx-vrp4-4pq7
    "pygments>=2.20.0", # GHSA-5239-wwwm-4pmq
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.15",
    "mkdocstrings>=0.24.1",
    "mkdocstrings-python>=2.0.4",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["implementations"]

# Default dependency groups to be installed
[tool.uv]
default-groups = ["dev", "docs"]
override-dependencies = [
    "aiohttp>=3.14.0", # Fix CVE-2026-34993 (CookieJar.load arbitrary code execution), CVE-2026-47265
    "authlib>=1.6.11", # Override aieng-platform-onboard's exact pin to fix GHSA-jj8c-mmj3-mmgv
    "fastapi!=0.136.3", # MAL-2026-4750: malicious undocumented dependency added in 0.136.3
    "pip>=26.1.2", # Fix PYSEC-2026-196 (console_scripts path sanitization vulnerability)
    "python-multipart>=0.0.27", # Fix CVE-2026-42561 (DoS in multipart header parsing)
    "starlette>=1.0.1", # Fix PYSEC-2026-161 (Host header path injection / auth bypass)
    "pip>=26.1.2", # Fix PYSEC-2026-196 (console_scripts path traversal)
    "urllib3>=2.7.0", # Fix CVE-2026-44431, CVE-2026-44432
    "msgpack>=1.2.1", # Fix GHSA-6v7p-g79w-8964 (Unpacker SEGV / DoS after error)
    "pydantic-settings>=2.14.2", # Fix GHSA-4xgf-cpjx-pc3j (NestedSecretsSettingsSource symlink traversal)
]

[tool.uv.workspace]
members = [
  "aieng-agents",
]

[tool.uv.sources]
aieng-agents = { workspace = true }

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
    "N", # pep8-naming
    "ERA", # eradicate
    "PL", # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905", # `zip()` without an explicit `strict=` parameter
    "E501", # line too long
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "PLR2004", # Replace magic number with named constant
    "PLR0913", # Too many arguments
    "COM812", # Missing trailing comma
    "N999", # Number in module names.
    "ERA001", # Commented out lines.
]

# Ignore import violations in all `__init__.py` files.
# Ignore missing docstring in `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811", "D104"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]

[tool.coverage]
    [tool.coverage.run]
    source=["aieng-agents/aieng"]
    omit=["aieng-agents/aieng/tests/*", "tests/*", "*__init__.py"]
