[project]
name = "aieng-agents"
version = "0.1.2"
description = "Helper modules for Vector Institute AI Engineering Agents Bootcamp implementations"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiohttp>=3.13.4", # Pinning version to address vulnerabilities GHSA-p998-jp59-783m GHSA-hcc4-c3v8-rx92 GHSA-m5qp-6w8w-w647 GHSA-3wq7-rqq7-wx6j GHSA-mwh4-6h8g-pg8w GHSA-966j-vmvw-g2g9 GHSA-63hf-3vf5-4wqf GHSA-c427-h43c-vf67 GHSA-w2fm-2cpv-w7v5 GHSA-2vrm-gr82-f7m5
    "authlib>=1.6.11", # Pinning version to address vulnerability GHSA-jj8c-mmj3-mmgv
    "backoff>=2.2.1",
    "beautifulsoup4>=4.13.4",
    "click>=8.3.0",
    "cryptography>=46.0.7", # Pinning version to address vulnerabilities GHSA-m959-cc7f-wv43 GHSA-p423-j2cm-9vmq
    "datasets>=4.4.0",
    "e2b-code-interpreter>=2.3.0",
    "fastapi[standard]>=0.116.1",
    "google-cloud-firestore>=2.21.0",
    "google-genai>=1.46.0",
    "gradio>=6.7.0",
    "httpx>=0.28.1",
    "langfuse>=3.9.0",
    "lxml>=6.0.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.6.0",
    "openai-agents>=0.4.0",
    "pandas>=2.3.3",
    "pillow>=12.2.0",  # Pinning version to address vulnerability GHSA-whj4-6x5x-4v2j
    "pydantic>=2.11.7",
    "pydantic-ai-slim[logfire]>=0.3.7",
    "pymupdf>=1.26.7",
    "pyasn1>=0.6.3", # Pinning version to address vulnerability GHSA-jr27-m4p2-rc6r
    "python-multipart>=0.0.26", # Pinning version to address vulnerability GHSA-mj87-hwqh-73pj
    "requests>=2.33.0", # Pinning version to address vulnerability GHSA-gc5v-m9x4-r6x2
    "simplejson>=3.20.2",
    "transformers>=5.1.0",  # Pinning version to address vulnerability GHSA-69w3-r845-3855
    "weaviate-client>=4.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["aieng/"]

[tool.hatch.build.targets.wheel]
include = ["aieng/"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",  # Pinning version to address vulnerability GHSA-6w46-j5rx-g56g
    "pytest-asyncio>=1.2.0",
]

# Default dependency groups to be installed
[tool.uv]
default-groups = ["dev"]

[project.scripts]
pdf_to_hf_dataset = "aieng.agents.data.pdf_to_hf_dataset:main"
chunk_hf_dataset = "aieng.agents.data.chunk_hf_dataset:main"
