[project]
name = "aieng-agents"
version = "0.3.0"
description = "Helper modules for Vector Institute AI Engineering Agents Bootcamp implementations"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "backoff>=2.2.1",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "openai>=2.6.0",
    "openai-agents>=0.4.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.13.1",
    "rich>=15.0.0",
]

[project.optional-dependencies]
data = [
    "click>=8.3.2",
    "datasets>=4.8.4",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "transformers>=5.5.4",
]
weaviate = [
    "weaviate-client>=4.20.5",
]
code-interpreter = [
    "e2b-code-interpreter>=2.6.0",
]
gemini-proxy = [
    "fastapi[standard]>=0.136.0",
    "google-cloud-firestore>=2.27.0",
    "google-genai>=1.73.1",
]
news = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
]
gradio = [
    "gradio>=6.12.0",
]
observability = [
    "langfuse>=4.3.1",
    "pydantic-ai-slim[logfire]>=1.90.0",
]
all = [
    "aieng-agents[data,weaviate,code-interpreter,gemini-proxy,news,gradio,observability]",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

# Default dependency groups to be installed
[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["aieng/"]

[tool.hatch.build.targets.wheel]
include = ["aieng/"]

[project.scripts]
pdf_to_hf_dataset = "aieng.agents.cli:pdf_to_hf_dataset_main"
chunk_hf_dataset = "aieng.agents.cli:chunk_hf_dataset_main"
